Update the growl dependency to fix security vulnerability

--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "ajv": "^5.2.3",
     "lodash.topath": "^4.5.2",
     "prop-types": "^15.5.8",
-    "setimmediate": "^1.0.5"
+    "setimmediate": "^1.0.5",
+    "growl": "^1.10.5"
   },
   "devDependencies": {
     "atob": "^2.0.3",
